--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -19,6 +19,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>HomepageLogout</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>SignUp</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -39,11 +43,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AboutPage</td>
+<td>OnewayPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>OnewayPage</td>
+<td>AboutPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
