--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,12 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>runner.WebApp.AirportPage</td></tr>
+<tr><td>runner.WebApp.OnewayPage</td></tr>
+<tr><td>runner.WebApp.AboutPage</td></tr>
+<tr><td>runner.WebApp.OutstationPage</td></tr>
+<tr><td>runner.WebApp.HomepageLogin</td></tr>
+<tr><td>runner.WebApp.ContactPage</td></tr>
+<tr><td>runner.WebApp.LocalPage</td></tr>
+<tr><td>runner.WebApp.HomePage</td></tr>
+<tr><td>runner.WebApp.SignUp</td></tr>
+<tr><td>runner.WebApp.CorporatePage</td></tr>
 </table>
