--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,19 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">10</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">188,118</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,955</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="10">runner.WebApp</td><td><a href="#m0">AboutPage</a></td><td rowspan="1">1642501967777</td><td rowspan="1">1648</td></tr><tr class="passedeven"><td><a href="#m1">AirportPage</a></td><td rowspan="1">1642502065078</td><td rowspan="1">22650</td></tr><tr class="passedeven"><td><a href="#m2">ContactPage</a></td><td rowspan="1">1642501976566</td><td rowspan="1">5077</td></tr><tr class="passedeven"><td><a href="#m3">CorporatePage</a></td><td rowspan="1">1642502098172</td><td rowspan="1">9892</td></tr><tr class="passedeven"><td><a href="#m4">HomePage</a></td><td rowspan="1">1642501936895</td><td rowspan="1">352</td></tr><tr class="passedeven"><td><a href="#m5">HomepageLogin</a></td><td rowspan="1">1642501959979</td><td rowspan="1">484</td></tr><tr class="passedeven"><td><a href="#m6">LocalPage</a></td><td rowspan="1">1642502006834</td><td rowspan="1">15345</td></tr><tr class="passedeven"><td><a href="#m7">OnewayPage</a></td><td rowspan="1">1642501988391</td><td rowspan="1">11072</td></tr><tr class="passedeven"><td><a href="#m8">OutstationPage</a></td><td rowspan="1">1642502029420</td><td rowspan="1">27643</td></tr><tr class="passedeven"><td><a href="#m9">SignUp</a></td><td rowspan="1">1642501948449</td><td rowspan="1">735</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">runner.WebApp</td><td><a href="#m0">HomepageLogout</a></td><td rowspan="1">1642744099806</td><td rowspan="1">807</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">runner.WebApp#AboutPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">runner.WebApp#AirportPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">runner.WebApp#ContactPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">runner.WebApp#CorporatePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">runner.WebApp#HomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">runner.WebApp#HomepageLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">runner.WebApp#LocalPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">runner.WebApp#OnewayPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">runner.WebApp#OutstationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">runner.WebApp#SignUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">runner.WebApp#HomepageLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
